fix margin overlap

--- a/css/main.scss
+++ b/css/main.scss
@@ -311,7 +311,7 @@ footer {
         width: 100%;
 
         img {
-          margin: 4vw 5vw;
+          margin: 4vw 7vw;
         }
       }
       .skills-text-area {
